--- a/client/src/main/resources/explorer.fxml
+++ b/client/src/main/resources/explorer.fxml
@@ -50,11 +50,11 @@
                <children>
                   <VBox layoutX="154.0" layoutY="104.0" prefHeight="554.0" prefWidth="446.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <TextField />
-                        <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                        <TextField fx:id="pathLocalTextField" onAction="#addItem" />
+                        <TableView fx:id="localTableView" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="name" />
-                            <TableColumn prefWidth="75.0" text="size" />
+                            <TableColumn fx:id="localNameTableColumn" prefWidth="75.0" text="name" />
+                            <TableColumn fx:id="localSizeTableColumn" prefWidth="75.0" text="size" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -68,11 +68,11 @@
                <children>
                   <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <TextField />
-                        <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                        <TextField fx:id="pathRemoteTextField" />
+                        <TableView fx:id="remoteTableView" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="name" />
-                            <TableColumn prefWidth="75.0" text="size" />
+                            <TableColumn fx:id="remoteNameTableColumn" prefWidth="75.0" text="name" />
+                            <TableColumn fx:id="remoteSizeTableColumn" prefWidth="75.0" text="size" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
