signUp event, create root directory for User

--- a/client/src/main/resources/login.fxml
+++ b/client/src/main/resources/login.fxml
@@ -23,7 +23,7 @@
             <Insets bottom="10.0" />
         </VBox.margin>
     </Button>
-    <Button fx:id="buttonSignUp" prefHeight="39.0" prefWidth="250.0" text="Sign Up">
+    <Button fx:id="buttonSignUp" onAction="#sendSignUp" prefHeight="39.0" prefWidth="250.0" text="Sign Up">
         <VBox.margin>
             <Insets bottom="40.0" />
         </VBox.margin>
