common class File

--- a/client/src/main/resources/explorer.fxml
+++ b/client/src/main/resources/explorer.fxml
@@ -50,7 +50,7 @@
                <children>
                   <VBox layoutX="154.0" layoutY="104.0" prefHeight="554.0" prefWidth="446.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <TextField fx:id="pathLocalTextField" onAction="#addItem" />
+                        <TextField fx:id="pathLocalTextField" onAction="#pathLocalTextFieldOnAction" />
                         <TableView fx:id="localTableView" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                           <columns>
                             <TableColumn fx:id="localNameTableColumn" prefWidth="75.0" text="name" />
