--- a/client/src/main/resources/explorer.fxml
+++ b/client/src/main/resources/explorer.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -12,12 +11,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
 
-<VBox fx:id="rootVBox" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.gb.storage.client.ui.controller.ExplorerController" stylesheets="css/explorer.css">
+<VBox fx:id="rootVBox" prefHeight="600.0" prefWidth="900.0" stylesheets="css/explorer.css" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.gb.storage.client.ui.controller.ExplorerController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -84,5 +80,10 @@
             </AnchorPane>
         </items>
       </SplitPane>
+      <HBox>
+         <children>
+            <Button fx:id="buttonCopy" onAction="#copy" text="Copy" />
+         </children>
+      </HBox>
   </children>
 </VBox>
