--- a/client/src/main/resources/explorer.fxml
+++ b/client/src/main/resources/explorer.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -9,6 +10,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -46,7 +48,16 @@
                <children>
                   <VBox layoutX="154.0" layoutY="104.0" prefHeight="554.0" prefWidth="446.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <TextField fx:id="pathLocalTextField" onAction="#pathLocalTextFieldOnAction" />
+                        <HBox VBox.vgrow="NEVER">
+                           <children>
+                              <Button fx:id="buttonLocalBack" mnemonicParsing="false" onAction="#localBack" prefHeight="26.0" prefWidth="26.0" text="&lt;" HBox.hgrow="NEVER">
+                                 <tooltip>
+                                    <Tooltip text="Back" />
+                                 </tooltip>
+                              </Button>
+                              <TextField fx:id="pathLocalTextField" onAction="#pathLocalTextFieldOnAction" HBox.hgrow="ALWAYS" />
+                           </children>
+                        </HBox>
                         <TableView fx:id="localTableView" onMouseReleased="#lastFocusLocalTable" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                           <columns>
                             <TableColumn fx:id="localNameTableColumn" prefWidth="75.0" text="name" />
@@ -64,7 +75,16 @@
                <children>
                   <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <TextField fx:id="pathRemoteTextField" />
+                        <HBox VBox.vgrow="NEVER">
+                           <children>
+                              <Button fx:id="buttonRemoteBack" mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0" text="&lt;">
+                                 <tooltip>
+                                    <Tooltip text="Back" />
+                                 </tooltip>
+                              </Button>
+                              <TextField fx:id="pathRemoteTextField" HBox.hgrow="ALWAYS" />
+                           </children>
+                        </HBox>
                         <TableView fx:id="remoteTableView" onMouseReleased="#lastFocusRemoteTable" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                           <columns>
                             <TableColumn fx:id="remoteNameTableColumn" prefWidth="75.0" text="name" />
@@ -82,8 +102,14 @@
       </SplitPane>
       <HBox>
          <children>
-            <Button fx:id="buttonCopy" onAction="#copy" text="Copy" />
+            <Button fx:id="buttonCopy" onAction="#copy" text="Copy">
+               <tooltip>
+                  <Tooltip text="Copy selected files to opposite directory" />
+               </tooltip></Button>
          </children>
+         <padding>
+            <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+         </padding>
       </HBox>
   </children>
 </VBox>
