--- a/client/src/main/resources/fxml/explorer.fxml
+++ b/client/src/main/resources/fxml/explorer.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -108,6 +110,21 @@
                         <Tooltip text="Move selected files to bin" />
                     </tooltip>
                 </Button>
+            <Separator orientation="VERTICAL">
+               <padding>
+                  <Insets left="3.0" />
+               </padding>
+            </Separator>
+            <HBox fx:id="downloadHBox" alignment="CENTER">
+               <children>
+                  <Hyperlink onAction="#showDownloadsDetails" text="downloads" />
+               </children>
+            </HBox>
+            <Separator orientation="VERTICAL">
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
+            </Separator>
             </children>
             <padding>
                 <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
